crates/sui-graphql-macros/tests/compile/empty_path.stderr
error: Field path cannot be empty
 --> tests/compile/empty_path.rs:6:5
  |
6 |     address: String,
  |     ^^^^^^^
